--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -57,6 +57,16 @@
     - { rule: 'allow', port: '80', comment: 'HTTP' }
     - { rule: 'allow', port: '443', comment: 'HTTPS' }
 
+- name: Configuration UFW - bloquer accès externe PostgreSQL et Redis
+  community.general.ufw:
+    rule: deny
+    port: "{{ item.port }}"
+    proto: tcp
+    comment: "{{ item.comment }}"
+  loop:
+    - { port: '5432', comment: 'Block external PostgreSQL' }
+    - { port: '6379', comment: 'Block external Redis' }
+
 - name: Configuration UFW - règles additionnelles (production)
   community.general.ufw:
     rule: "{{ item.rule }}"
