--- a/docker/stateful/postgres/docker-compose.yml
+++ b/docker/stateful/postgres/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     container_name: postgres
     restart: always
     env_file: .env
+    ports:
+      - "127.0.0.1:5432:5432"
     volumes:
       - ${DATA_PATH}/postgres:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
@@ -15,50 +17,6 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
-
-  pgadmin:
-    image: dpage/pgadmin4:latest
-    container_name: pgadmin
-    restart: always
-    env_file: .env
-    environment:
-      - GUNICORN_THREADS=1
-      - GUNICORN_WORKERS=1
-      - PGADMIN_CONFIG_ENHANCED_COOKIE_PROTECTION=False
-      - PGADMIN_DISABLE_POSTFIX=True
-    volumes:
-      - ${DATA_PATH}/pgadmin:/var/lib/pgadmin
-    networks:
-      - default
-      - proxy
-    deploy:
-      resources:
-        limits:
-          cpus: '0.5'
-          memory: 512M
-        reservations:
-          memory: 256M
-    healthcheck:
-      test: ["CMD", "wget", "-O", "-", "http://localhost:80/misc/ping"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-    labels:
-      - "traefik.enable=true"
-      # HTTP Router
-      - "traefik.http.routers.pgadmin-http.rule=Host(`pgadmin.${BASE_DOMAIN}`)"
-      - "traefik.http.routers.pgadmin-http.entrypoints=web"
-      - "traefik.http.routers.pgadmin-http.service=pgadmin"
-      # HTTPS Router (activé uniquement si Let's Encrypt est activé)
-      {% if enable_letsencrypt %}
-      - "traefik.http.routers.pgadmin-https.rule=Host(`pgadmin.${BASE_DOMAIN}`)"
-      - "traefik.http.routers.pgadmin-https.entrypoints=websecure"
-      - "traefik.http.routers.pgadmin-https.service=pgadmin"
-      - "traefik.http.routers.pgadmin-https.tls=true"
-      - "traefik.http.routers.pgadmin-https.tls.certresolver=letsencrypt"
-      {% endif %}
-      # Service
-      - "traefik.http.services.pgadmin.loadbalancer.server.port=80"
 
 networks:
   default:
