--- a/docker/stateful/redis/docker-compose.yml
+++ b/docker/stateful/redis/docker-compose.yml
@@ -2,12 +2,13 @@ services:
   redis:
     image: redis:7-alpine
     container_name: redis
-    command: redis-server --requirepass ${REDIS_PASSWORD}
+    command: redis-server /usr/local/etc/redis/redis.conf --requirepass ${REDIS_PASSWORD}
     restart: always
     ports:
       - "127.0.0.1:6379:6379"
     volumes:
       - ${DATA_PATH}/redis/data:/data
+      - ./redis.conf:/usr/local/etc/redis/redis.conf:ro
     networks:
       - default
       - proxy
