Update secrets handling and improve monitoring setup:
- Revise `vault.yml.example` with static placeholder secrets and detailed instructions, replacing dynamic lookups.
- Enhance PostgreSQL Exporter with custom uptime query.
- Improve Prometheus and Grafana configurations with consistent datasource UID and refined PostgreSQL dashboards.
- Add Prometheus alert rule support for custom monitoring needs.
- Adjust NFS server configuration in `group_vars/test.yml`.

--- a/ansible/roles/monitoring/files/redis-alerts.yml
+++ b/ansible/roles/monitoring/files/redis-alerts.yml
@@ -123,7 +123,7 @@ groups:
           component: redis
         annotations:
           summary: "Redis RDB save has not completed recently"
-          description: "Redis instance {{ $labels.instance }} has not completed an RDB save in over 1 hour, and has {{ redis_rdb_changes_since_last_save }} changes pending."
+          description: "Redis instance {{ $labels.instance }} has not completed an RDB save in over 1 hour, and has changes pending."
 
       # AOF rewrite in progress for too long
       - alert: RedisAOFRewriteTooLong
