Add custom query for PostgreSQL postmaster start time and update Grafana dashboard
- Introduce `pg_postmaster` query to track PostgreSQL start time in Exporter.
- Update dashboard expression for accurate postmaster uptime calculation.

--- a/ansible/roles/monitoring/files/postgres-exporter-queries.yaml
+++ b/ansible/roles/monitoring/files/postgres-exporter-queries.yaml
@@ -2,6 +2,13 @@
 # Focus on pg_stat_statements and pgvector-specific metrics
 
 # Query for pg_stat_statements - Top queries by total time
+pg_postmaster:
+  query: "SELECT EXTRACT(EPOCH FROM pg_postmaster_start_time()) as start_time_seconds"
+  metrics:
+    - start_time_seconds:
+        usage: "GAUGE"
+        description: "Time at which postmaster started"
+
 pg_stat_statements:
   query: |
     SELECT
