Switch to dedicated PostgreSQL for Immich:
- Add Docker Compose service for `immich-postgres` using VectorChord-enabled PostgreSQL image.
- Introduce initialization script to set up required extensions (`cube`, `earthdistance`) for Immich.
- Update Ansible templates and tasks for `.env` generation and PostgreSQL initialization script deployment.
- Remove redundant `vectors` schema and related permissions from global PostgreSQL initialization scripts.
- Update NFS server configuration in `group_vars/test.yml`.

--- a/ansible/roles/immich/tasks/main.yml
+++ b/ansible/roles/immich/tasks/main.yml
@@ -9,7 +9,14 @@
   loop:
     - "{{ data_path }}/immich/upload"
     - "{{ data_path }}/immich/model-cache"
+    - "{{ data_path }}/immich/postgres"
     - "{{ docker_compose_path }}/immich"
+
+- name: Copier le script d'initialisation PostgreSQL
+  ansible.builtin.copy:
+    src: ../../../docker/app/immich/init-immich-db.sql
+    dest: "{{ docker_compose_path }}/immich/init-immich-db.sql"
+    mode: '0644'
 
 - name: Générer le fichier .env
   ansible.builtin.template:
