--- a/docker/app/immich/docker-compose.yml
+++ b/docker/app/immich/docker-compose.yml
@@ -1,4 +1,23 @@
 services:
+  immich-postgres:
+    container_name: immich_postgres
+    image: ghcr.io/immich-app/postgres:14-vectorchord0.4.3-pgvectors0.2.0
+    restart: always
+    environment:
+      POSTGRES_USER: ${DB_USERNAME}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_DATABASE_NAME}
+      POSTGRES_INITDB_ARGS: '--data-checksums'
+      # Uncomment to use HDD-optimized settings instead of SSD (default)
+      # DB_STORAGE_TYPE: 'HDD'
+    volumes:
+      - ${DATA_PATH}/immich/postgres:/var/lib/postgresql/data
+      - ./init-immich-db.sql:/docker-entrypoint-initdb.d/init.sql
+    shm_size: 128mb
+    networks:
+      - default
+      - proxy
+
   immich-server:
     container_name: immich_server
     image: ghcr.io/immich-app/immich-server:release
@@ -8,6 +27,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
     env_file: .env
     depends_on:
+      - immich-postgres
       - immich-machine-learning
     restart: always
     networks:
