- Refactor Traefik and service configurations:   - Remove redundant comments and streamline conditional `Let's Encrypt` logic.   - Add `grafana_root_url` to both test and production group variables for better setup consistency.   - Expose Traefik API/Dashboard on port 8080 with updated health checks.   - Standardize `trim_blocks` and `lstrip_blocks` settings in Ansible templates to improve YAML rendering.   - Adjust NFS server IP addresses in `group_vars/test.yml` and other templates.   - Refine service-specific `Docker Compose` files (Nextcloud, Immich, Jellyfin, Grafana) with cleaner rules, labels, and middlewares.

--- a/ansible/group_vars/production.yml
+++ b/ansible/group_vars/production.yml
@@ -88,6 +88,7 @@ docker_log_max_file: "5"
 
 # Monitoring
 prometheus_retention: "90d"
+grafana_root_url: "https://monitoring.louisvolat.fr"
 grafana_install_plugins: true
 prometheus_cadvisor_enabled: true
 
