--- a/docker/traefik/docker-compose.yml
+++ b/docker/traefik/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     ports:
       - "80:80"      # HTTP
       - "443:443"    # HTTPS
+      - "8080:8080"  # API / Dashboard / Healthcheck
     environment:
       - TZ=${TZ:-Europe/Paris}
       # Let's Encrypt (production seulement)
